feat: 增加代理健康检查，如果代理不可用则降级到直连 fix: 版本已经最新还提示有更新